--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.username=root
-spring.datasource.password=ashokit@123
-spring.datasource.url=jdbc:mysql://localhost:3306/jrtp25
+spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/usermgmt
 
 spring.jpa.hibernate.ddl-auto=update
 
@@ -12,7 +12,7 @@ server.port=9090
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=ashokit.classes@gmail.com
-spring.mail.password=fhxl dwmw ziws yhbg
+spring.mail.username=
+spring.mail.password=c
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
